Closed
Bug 518834
Opened 16 years ago
Closed 16 years ago
Command left arrow in edit field in bookmark manager goes back in history
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino2.0
People
(Reporter: phiw2, Assigned: stuart.morgan+bugzilla)
References
Details
(Keywords: regression, Whiteboard: [camino-2.0])
Attachments
(1 file)
|
1.54 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR
1. open BM manager over existing page
2. focus a bookmark (-folder) and make title field editable
3. edit
4. Cmd - left-arrow to move cursor the beginning of the line/field
AR: out of the BM manager, back to the previous page
ER: move cursor
Works fine in 1.6.9, broken on 2.0: regression 20080331 - 20080401
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=Camino&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-03-31+00%3A00%3A00&maxdate=2008-04-01+00%3A00%3A00&cvsroot=%2Fcvsroot
lots of Camino bugs... but bug 405744 seems a good candidate.
Sorry if this is a dupe, but I couldn't find any.
"yay" :P
| Assignee | ||
Comment 2•16 years ago
|
||
Whoops, I didn't think through the hierarchy carefully enough. Easily fixed
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Flags: camino2.0? → camino2.0+
Target Milestone: --- → Camino2.0
| Assignee | ||
Comment 3•16 years ago
|
||
Check for the real content view being focused.
Attachment #403488 -
Flags: superreview?(mikepinkerton)
Comment 4•16 years ago
|
||
Comment on attachment 403488 [details] [diff] [review]
fix
sr=pink
Attachment #403488 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 5•16 years ago
|
||
Landed on CVS trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
| Reporter | ||
Comment 6•16 years ago
|
||
Verified with 2.1a1pre (1.9.0.16pre 2009100901)
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•