Camino only - Bug 518834: Don't enable command back/forward when one of our auxiliary content views is showing. sr=pink